# uploadr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  PKGBUILD.aur  PKGBUILD.mpr  README.md  version.h.in
src/: main.cpp  main.rs
src/util/clipboard/: clipboard.cpp  clipboard.hpp
src/util/cloning-machine/: cloning-machine.hpp
src/util/config/: config.cpp  config.hpp
src/util/cookies/: cookies.cpp  cookies.hpp
src/util/curlyfries/: curlyfries.cpp  curlyfries.hpp
src/util/flags/: flags.cpp  flags.hpp
src/util/not-notify/: not-notify.cpp  not-notify.hpp
src/util/pigeonhole/: pigeonhole.cpp  pigeonhole.hpp
src/util/stopgap/: stopgap.cpp  stopgap.hpp
src/util/syntactic/: syntactic.cpp  syntactic.hpp
src/util/template/: function.cpp  function.hpp  template-data.hpp  template.cpp  template.hpp
src/utils/: clippy.rs  config.rs  curlyfries.rs  file.rs  history.rs  mod.rs  templator.rs
