[package]
name = "uploadr"
version = "2.0.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.10.0"
arboard = "3.3.0"
curl = "0.4.44"
serde_json = "1.0.111"
serde = "1.0.195"
clap = { version = "4.4.15", features = ["derive"] }
