[package]
name = "uploadr"
description = "Uploadr is a command line tool to upload files to the cloud."
version = "2.0.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.10.0"
arboard = "3.3.0"
curl = "0.4.44"
serde_json = "1.0.111"
serde = "1.0.195"
clap = { version = "4.4.15", features = ["derive"] }
open = "5.0.1"
serde-xml-rs = "0.6.0"
serde_json_path = "0.6.4"
csv = "1.3.0"
chrono = "0.4.31"
infer = "0.15.0"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
atty = "0.2.14"
image = "0.24.8"
